# sprattus

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.MD  commit.sh.save  docker-compose.yml
async-example/: Cargo.toml
async-example/src/: main.rs
profugus/: Cargo.toml
profugus-derive/: Cargo.toml
profugus-derive/src/: functions.rs  lib.rs
profugus-example/: Cargo.toml
profugus-example/src/: main.rs
profugus-test/: Cargo.toml
profugus-test/src/: keywords.rs  main.rs
profugus/src/: connection.rs  lib.rs  traits.rs
shared/: createdb.sh
sprattus/: Cargo.toml
sprattus-derive/: Cargo.toml
sprattus-derive/src/: from_sql.rs  functions.rs  lib.rs  to_sql.rs
sprattus-test/: Cargo.toml
sprattus-test/src/: keywords.rs  main.rs
sprattus/src/: connection.rs  lib.rs  traits.rs
sync-diesel-example/: Cargo.toml  diesel.toml
sync-diesel-example/src/: main.rs  models.rs  schema.rs
tokio-postgres-async-await-try/: Cargo.toml
tokio-postgres-async-await-try/src/: main.rs  models.rs
tokio-postgres-example/: Cargo.toml
tokio-postgres-example/src/: main.rs  models.rs
