[package]
name = "profugus-test"
version = "0.1.0"
authors = ["Martijn Groeneveldt <Martijn Groeneveldt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
profugus = {path = "../profugus"}
tokio = "^0.2.0-alpha.5"
postgres-derive = "0.3.3"
chrono = "^0.4.0"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"]  }
futures-util-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }