[package]
name = "profugus"
version = "0.1.0"
authors = ["Martijn <martijn@tweedegolf.nl>"]
edition = "2018"

[dependencies]
# todo: Add optional support for all feature flags of tokio-postgres
tokio-postgres = { git= "https://github.com/sfackler/rust-postgres.git", branch = "master", features = ["with-chrono-0_4"] }
tokio = "^0.2.0-alpha.5"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"]  }
futures-util-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
parking_lot = "0.9.0"
strfmt = "0.1.6"


profugus-derive = { version = "*", path = "../profugus-derive" }