[package]
name = "sprattus-derive"
version = "0.0.1"
authors = ["Martijn <martijn@tweedegolf.nl>"]
edition = "2018"
readme = "../README.MD"
license-file = "../LICENSE"
description = "The derive macros for a async orm for Postgres"
repository = "https://github.com/dutchmartin/sprattus"
categories = ["database", "asynchronous", "postgres"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["extra-traits"]}
quote =  { version = "1.0.2" }
proc-macro2 = "1.0.2"