[package]
name = "sprattus-test"
version = "0.1.0"
authors = ["Martijn Groeneveldt <Martijn Groeneveldt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprattus = { path = "../sprattus", features = ["with-chrono-0_4"] }
tokio = { version = "0.2", features = ["macros"] }
chrono = "^0.4.0"
