[package]
name = "sprattus"
version = "0.0.1"
authors = ["Martijn Groeneveldt <martijn.groeneveldt@gmail.com>"]
edition = "2018"
readme = "../README.MD"
description = "A async orm for Postgres"
repository = "https://github.com/dutchmartin/sprattus"
license-file = "../LICENSE"
categories = ["database", "asynchronous", "postgres"]


[dependencies]
tokio-postgres = { version="=0.5.1" , features = ["default"]}
futures-util = "0.3.1"
strfmt = "0.1.6"
sprattus-derive = "0.0.1"
tokio = "1.18"


[features]
"with-bit-vec-0_6" = ["tokio-postgres/with-bit-vec-0_6"]
"with-chrono-0_4" = ["tokio-postgres/with-chrono-0_4"]
"with-eui48-0_4" = ["tokio-postgres/with-eui48-0_4"]
"with-geo-types-0_4" = ["tokio-postgres/with-geo-types-0_4"]
"with-serde_json-1" = ["tokio-postgres/with-serde_json-1"]
"with-uuid-0_8" = ["tokio-postgres/with-uuid-0_8"]