[package]
name = "sync-diesel-example"
version = "0.1.0"
authors = ["Martijn Groeneveldt <Martijn Groeneveldt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.2", features = ["postgres", "numeric"]}
dotenv = "0.14.1"
num-bigint = "*"
bigdecimal = "*"